--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,9 @@
         </activity>
         <activity
             android:name=".CameraActivity"
-            android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".FotosActivity"></activity>
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".FotosActivity" />
+        <activity android:name=".LaudoActivity"></activity>
     </application>
 
 </manifest>
