--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ExameActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity">
+
+        </activity>
         <activity
             android:name=".CameraActivity"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".FotosActivity" />
-        <activity android:name=".LaudoActivity"></activity>
+        <activity
+            android:name=".FotosActivity"
+            android:parentActivityName=".CameraActivity" />
+        <activity android:name=".LaudoActivity" />
+        <activity android:name=".GerarActivity" />
     </application>
 
 </manifest>
