--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ExameActivity">
+        <activity android:name=".ResumoExameActivity"></activity>
+        <activity android:name=".CadastrarExameActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".ExameActivity" />
+        <activity android:name=".MainActivity" />
         <activity
             android:name=".CameraActivity"
             android:parentActivityName=".MainActivity" />
