Bug das listas de exame corrigido

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ResumoExameActivity"></activity>
+        <activity android:name=".ResumoExameActivity"
+            android:parentActivityName=".ExameActivity">
+
+        </activity>
         <activity android:name=".CadastrarExameActivity"
             android:parentActivityName=".ExameActivity"
             android:label="Marcar Exame"/>
