--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.samuel.medimagem"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 8
         versionName '0.5.0'
@@ -33,6 +33,9 @@ dependencies {
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.googlecode.mp4parser:isoparser:1.0.2'
+    implementation 'com.github.lassana:continuous-audiorecorder:1.3.2'
+    implementation 'com.writingminds:FFmpegAndroid:0.3.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
